[package]
name = "pir-8-emu"
description = "Implementation of the pir-8 ISA"
documentation = "https://rawcdn.githack.com/LoungeCPP/pir-8-emu/doc/pir_8_emu/index.html"
repository = "https://github.com/LoungeCPP/pir-8-emu-rs"
homepage = "https://github.com/thecoshman/pir-8"
readme = "README.md"
keywords = ["isa", "emulation", "cpu"]
categories = ["emulators"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in pir-8-emu.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
num-traits = "0.2"
clap = "2.33"

[dev-dependencies]
rand = "0.7"
