[package]
name = "pir-8-emu"
description = "Implementation of the pir-8 ISA"
documentation = "https://rawcdn.githack.com/LoungeCPP/pir-8-emu/doc/pir_8_emu/index.html"
repository = "https://github.com/LoungeCPP/pir-8-emu-rs"
homepage = "https://github.com/thecoshman/pir-8"
readme = "README.md"
keywords = ["isa", "emulation", "cpu"]
categories = ["emulators"]
license = "MIT"
# Remember to also update in appveyor.yml
version = "0.1.0"
# Remember to also update in man/*.md
authors = ["nabijaczleweli <nabijaczleweli@gmail.com>"]
exclude = ["*.enc"]


[dependencies]
bear-lib-terminal = "2.0"
tinyfiledialogs = "3.3"
downcast-rs = "1.0"
arraydeque = "0.4"
num-traits = "0.2"
clap = "2.33"
dirs = "2.0"
time = "0.1"
toml = "0.5"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dev-dependencies]
rand = "0.7"
