[package]
name = "nfd"
version = "0.0.4"
authors = [
	"Saurav Sachidanand <sauravsachidanand@gmail.com>",
	"Daniel Collin <daniel@collin.com>",
	"Denis Kolodin <deniskolodin@gmail.com>",
]

license = "MIT"
repository = "https://www.github.com/saurvs/nfd-rs"

description = "Rust bindings to nativefiledialog"
keywords = ["file", "dialog", "ui"]

build = "build.rs"

[build-dependencies]
cc = "1.0"

